# MH0386.github.io

./: .deepsource.toml  .envrc  .flutter-plugins  .flutter-plugins-dependencies  .gitattributes  .gitignore  .metadata  .pre-commit-config.yaml  404.html  CNAME  Cargo.toml  Dioxus.toml  MyPersonalWebpage.html  README.md  devbox.json  devenv.nix  devenv.yaml  flutter_bootstrap.js  flutter_service_worker.js  gitattributes  index.css  index.html  input.css  main.dart.js  manifest.json  package-lock.json  package.json  pubspec.yaml  pyproject.toml  renovate.json  rxconfig.py  tailwind.config.js  test.html  version.json
.dart_tool/: package_config.json  package_config_subset
.flox/: env.json
.github/: CODEOWNERS  dependabot.yaml  dependabot.yml  mergify.yml  renovate.json
.idx/: dev.nix
.sonarlint/: connectedMode.json
.trunk/: trunk.yaml
ProjectFiles/: Home.html  MyPersonalWebpage.css  MyPersonalWebpage.html
android/: local.properties
assets/: AssetManifest.bin.json  AssetManifest.json  FontManifest.json  NOTICES  main-05f9bd322992ff81.css  main-05f9bd322992ff81.css.br  main-188cc6a073f45bae.css  main-188cc6a073f45bae.css.br  main-349aad3fb72d5762.css  main-47329038368fa4ef.css  main-47329038368fa4ef.css.br  main-486b12fd8309d76c.css  main-486b12fd8309d76c.css.br  main-4b536678172d17f6.css  main-6b17aa626015d6d7.css.br  main-78db2a540d58b02d.css  main-78db2a540d58b02d.css.br  main-804f31f12b1a8a74.css.br  main-c549d76e0b780e7c.css  main-cc943e5abc99245c.css  main-cc943e5abc99245c.css.br  main-eff0f7feb26fc2b4.css  main.css  my_website-18b2ba3bb71e0e53.js  my_website-18b2ba3bb71e0e53.js.br  my_website-278f0b88003587b9.js  my_website-278f0b88003587b9.js.br  my_website-49c2d41ae4f94461.js  my_website-49c2d41ae4f94461.js.br  my_website-53d78ad7d0cf4656.js  my_website-53d78ad7d0cf4656.js.br  my_website-5968317c2b9fa0cf.js  my_website-5968317c2b9fa0cf.js.br  my_website-5be740b99630d14c.js  my_website-5be740b99630d14c.js.br  my_website-5f01935aa82805bd.js  my_website-5f01935aa82805bd.js.br  my_website-648073754a33d5af.js  (+161 more)
data/: info.json
(+120 files in other folders)
