[project]
  authors=[
    { name="Mohamed Hisham Abdelzaher", email="mohamed.hisham.abdelzaher@gmail.com" },
  ]
  dependencies=["flet-webview>=0.1.0", "flet==0.28.3", "loguru>=0.7.3"]
  description=""
  name="mh0386"
  readme="README.md"
  requires-python=">=3.11"
  version="0.1.0"

[tool.flet]
  company="MH0386"
  copyright="Copyright (C) 2025 by MH0386"
  org="com.mh0386"
  product="mh0386"

[tool.flet.app]
  path="src"

[dependency-groups]
  dev=["flet[all]>=0.27.6", "ruff>=0.11.11", "ty>=0.0.1a6"]

[tool.pyright]
  reportAttributeAccessIssue=false
  reportUnknownMemberType=false
