[project]
name = "mh0386-github-io"
version = "0.0.1"
description = "MH0386's Personal Website built with Reflex"
readme = "README.md"
authors = [
  { name = "Mohamed Hisham Abdelzaher", email = "mohamed.hisham.abdelzaher@gmail.com" },
]
requires-python = ">=3.13,<3.14"
dependencies = ["reflex>=0.7.14"]

[dependency-groups]
dev = ["ruff>=0.12.1", "ty>=0.0.1a12"]
