[project]
name = "mh0386-github-io"
version = "0.0.1"
description = "MH0386's Personal Website built with Reflex"
readme = "README.md"
authors = [
  { name = "Mohamed Hisham Abdelzaher", email = "mohamed.hisham.abdelzaher@gmail.com" },
]
requires-python = ">=3.14.3,<3.15"
dependencies = ["reflex>=0.8.28"]

[dependency-groups]
dev = ["ruff>=0.15.6", "ty>=0.0.23"]
